--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-/admin/module/barang/backup_restore/file_backup_csv/*
-/admin/module/barang/backup_restore/file_backup_sql/*
+
+*.csv
+*.sql
+
 /junk
